--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tabler/icons-react": "^2.34.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-magic-motion": "^1.1.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
